--- a/final_project/FinalProject_Harrison-Q-Ma.ipynb
+++ b/final_project/FinalProject_Harrison-Q-Ma.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "A lot of previous work link the availability of parks in the city to the overall crime rate of the city. Studies have found a correlation between the amount of green space in the city to the rate of violent crimes in the city: the more green space, the lower the violent crime rate. CDC also found a correlation between people's behavior in park usage and the types of crimes being committed in the city. However, these studies did not explore the question in more detail. Therefore, in this project, I want to do some more in depth about the effect on parks on the crime rate of its immediate surrounding areas. \n",
     "\n",
-    "References (include links):\n",
+    "References:\n",
     "- 1) Effects of Crime Type and Location on Park Use Behavior (CDC) https://www.cdc.gov/pcd/issues/2020/19_0434.htm\n",
     "- 2) The Impact of Green Space on Violent Crime in Urban Environments: An Evidence Synthesis https://www.mdpi.com/journal/ijerph\n",
     "- 3) Safe cities: California, Texas are home to many of towns with lower violent crime rates https://www.usatoday.com/story/money/2019/10/27/crime-rates-lower-in-these-us-safest-cities/40406533/\n",
